name:                jdec
version:             0.0.1
synopsis:            Java decompiler
license:             BSD3
license-file:        LICENSE
author:              rel-eng
maintainer:          rel-eng@yandex.ru
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable jdec
  main-is: Main.hs
  other-modules: JDec.Class.Raw.Class, JDec.Class.Raw.ClassVersion, JDec.Class.Raw.Attribute, JDec.Class.Raw.FieldModifier, JDec.Class.Raw.Field, JDec.Class.Raw.MethodHandleKind, JDec.Class.Raw.ConstantPoolEntry, JDec.Class.Raw.ClassModifier, JDec.Class.Raw.ConstantPoolIndex, JDec.Class.Raw.MethodModifier, JDec.Class.Raw.Method, JDec.Class.Raw.InnerClassModifier, JDec.Class.Raw.InnerClassInfo, JDec.Class.Raw.LineNumberInfo, JDec.Class.Raw.LocalVariableInfo, JDec.Class.Raw.LocalVariableTypeInfo, JDec.Class.Raw.Annotation, JDec.Class.Raw.VerificationTypeInfo, JDec.Class.Raw.StackMapFrame, JDec.Class.Raw.BootstrapMethodInfo, JDec.Class.Raw.ExceptionHandlerInfo, JDec.Bytecode.Raw.ArrayType, JDec.Bytecode.Raw.Instruction, JDec.Class.Parse.ParseClass, JDec.Class.Parse.ParseConstantPoolEntry
  hs-source-dirs: src
  build-depends: base >= 4.6.0.1, text >= 0.11.3.1, containers >= 0.5.2.1, binary >= 0.7.1.0, bytestring >= 0.10.2.0
  ghc-options: -threaded -Wall -rtsopts